fix: linter fix